--- a/package.yaml
+++ b/package.yaml
@@ -25,16 +25,16 @@ dependencies:
 library:
   source-dirs: src
 
-executables:
-  laop-exe:
-    main:                Main.hs
-    source-dirs:         app
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - laop
+#executables:
+#  laop-exe:
+#    main:                Main.hs
+#    source-dirs:         app
+#    ghc-options:
+#    - -threaded
+#    - -rtsopts
+#    - -with-rtsopts=-N
+#    dependencies:
+#    - laop
 
 tests:
   laop-test:
