--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,23 +21,33 @@ jobs:
     - uses: actions/checkout@v2
       if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
 
-    - uses: actions/setup-haskell@v1
-      name: Setup Haskell
-      with:
-        ghc-version: ${{ matrix.ghc }}
-        cabal-version: ${{ matrix.cabal }}
+    #- uses: actions/setup-haskell@v1
+    #  name: Setup Haskell
+    #  with:
+    #    ghc-version: ${{ matrix.ghc }}
+    #    cabal-version: ${{ matrix.cabal }}
 
-    - uses: actions/cache@v1
-      name: Cache ~/.cabal/store
-      with:
-        path: ~/.cabal/store
-        key: ${{ runner.os }}-${{ matrix.ghc }}-cabal
+    #- uses: actions/cache@v1
+    #  name: Cache ~/.cabal/store
+    #  with:
+    #    path: ~/.cabal/store
+    #    key: ${{ runner.os }}-${{ matrix.ghc }}-cabal
+
+    - uses: cachix/install-nix-action@v10
+      name: Install Nix
+
+    - uses: cachix/cachix-action@v6
+          with:
+            name: mycache
+            signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+            # Only needed for private caches
+            #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
     - name: Build
       run: |
-        cabal v2-update
-        cabal v2-build --enable-tests --enable-benchmarks
+        nix-build --arg exe --argstr compiler ${{ matrix.ghc }}
 
     - name: Test
       run: |
-        cabal v2-test --enable-tests
+        nix-shell --argstr compiler ${{ matrix.ghc }} --run 'cabal v2-test --enable-tests'
+
