--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           - "8.8.3"
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2.3.1
       if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
 
     #- uses: actions/setup-haskell@v1
@@ -39,9 +39,9 @@ jobs:
     - uses: cachix/cachix-action@v6
       with:
         name: mycache
-        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+        signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
         # Only needed for private caches
-        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+        #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
     - name: Build
       run: |
