--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
 
     - uses: cachix/cachix-action@v6
       with:
-        name: mycache
+        name: bolt12-laop
         signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
