Fixed nix command to run on CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Build
       run: |
-        nix-build --arg exe --argstr compiler ${{ matrix.ghc }}
+        nix-build --attr exe --argstr compiler ${{ matrix.ghc }}
 
     - name: Test
       run: |
