--- a/laop.cabal
+++ b/laop.cabal
@@ -1,4 +1,4 @@
-cabal-version:       2.4
+cabal-version:       3.0
 name:                laop
 version:             0.1.1.1
 synopsis:            Matrix programming library
@@ -10,13 +10,14 @@ license:             MIT
 license-file:        LICENSE
 author:              Armando Santos
 maintainer:          Armando Santos <armandoifsantos@gmail.com>
-copyright:           2020 Armando Santos
+copyright:           2023 Armando Santos
 category:            Data
 build-type:          Simple
 extra-doc-files:     README.md
                      CHANGELOG.md
 tested-with:         GHC == 8.6.5
                      GHC == 8.8.3
+                     GHC == 9.2.8
 
 source-repository head
   type:                git
@@ -25,21 +26,22 @@ source-repository head
 common common-options
   build-depends:       base >= 4.12.0.0 && < 5,
                        deepseq
-  
+
   ghc-options:         -Wall
+                       -Wno-unticked-promoted-constructors
                        -Wcompat
-                       -Widentities
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
-  if impl(ghc >= 8.0)
-    ghc-options:       -Wredundant-constraints
-  if impl(ghc >= 8.2)
-    ghc-options:       -fhide-source-paths
-  if impl(ghc >= 8.4)
-    ghc-options:       -Wmissing-export-lists
                        -Wpartial-fields
-  if impl(ghc >= 8.8)
-    ghc-options:       -Wmissing-deriving-strategies
+                       -Widentities
+                       -Wredundant-constraints
+                       -Wunused-packages
+                       -fhide-source-paths
+                       -Wmissing-export-lists
+                       -Wpartial-fields
+                       -Wno-compat-unqualified-imports
+                       -- Needed because ghc considers exporting f and f' the same name
+                       -Wno-duplicate-exports
 
   default-language:    Haskell2010
 
