Update repo to use flakes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         ghc:
           - "ghc8107"
           - "ghc92"
+          - "ghc967"
+          - "ghc910"
 
     steps:
     - uses: actions/checkout@v2.3.1
