--- a/laop.cabal
+++ b/laop.cabal
@@ -1,90 +1,108 @@
-cabal-version:       3.0
-name:                laop
-version:             0.2.0.0
-synopsis:            Matrix programming library
-description:         Matrix programming library that uses a type-safe inductive definition
-                     inspired by the Linear Algebra of Programming
-homepage:            https://github.com/bolt12/laop
-bug-reports:         https://github.com/bolt12/laop/issues
-license:             MIT
-license-file:        LICENSE
-author:              Armando Santos
-maintainer:          Armando Santos <armandoifsantos@gmail.com>
-copyright:           2023 Armando Santos
-category:            Data
-build-type:          Simple
-extra-doc-files:     README.md
-                     CHANGELOG.md
-tested-with:         GHC == 8.10.7
-                     GHC == 9.2.8
+cabal-version: 3.0
+name: laop
+version: 0.2.0.0
+synopsis: Matrix programming library
+description:
+  Matrix programming library that uses a type-safe inductive definition
+  inspired by the Linear Algebra of Programming
+
+homepage: https://github.com/bolt12/laop
+bug-reports: https://github.com/bolt12/laop/issues
+license: MIT
+license-file: LICENSE
+author: Armando Santos
+maintainer: Armando Santos <armandoifsantos@gmail.com>
+copyright: 2023 Armando Santos
+category: Data
+build-type: Simple
+extra-doc-files:
+  CHANGELOG.md
+  README.md
+
+tested-with: ghc ==8.10.7 || ==9.2.8
 
 source-repository head
-  type:                git
-  location:            https://github.com/bolt12/laop.git
+  type: git
+  location: https://github.com/bolt12/laop.git
 
 common common-options
-  build-depends:       base >= 4.12.0.0 && < 5,
-                       deepseq
+  build-depends:
+    base >=4.12.0.0 && <5,
+    deepseq,
 
-  ghc-options:         -Wall
-                       -Wno-unticked-promoted-constructors
-                       -Wcompat
-                       -Wincomplete-uni-patterns
-                       -Wincomplete-record-updates
-                       -Wpartial-fields
-                       -Widentities
-                       -Wredundant-constraints
-                       -Wunused-packages
-                       -fhide-source-paths
-                       -Wmissing-export-lists
-                       -Wpartial-fields
-                       -Wno-compat-unqualified-imports
-                       -- Needed because ghc considers exporting f and f' the same name
-                       -Wno-duplicate-exports
+  ghc-options:
+    -Wall
+    -Wno-unticked-promoted-constructors
+    -Wcompat
+    -Wincomplete-uni-patterns
+    -Wincomplete-record-updates
+    -Wpartial-fields
+    -Widentities
+    -Wredundant-constraints
+    -Wunused-packages
+    -fhide-source-paths
+    -Wmissing-export-lists
+    -Wpartial-fields
+    -Wno-compat-unqualified-imports
+    -Wno-duplicate-exports
 
-  default-language:    Haskell2010
+  -- Needed because ghc considers exporting f and f' the same name
+  default-language: Haskell2010
+  default-extensions: ImportQualifiedPost
 
 library
-  import:              common-options
-  hs-source-dirs:      src
-  exposed-modules:     LAoP.Dist
-                       LAoP.Dist.Internal
-                       LAoP.Matrix.Internal
-                       LAoP.Matrix.Nat
-                       LAoP.Matrix.Type
-                       LAoP.Relation
-                       LAoP.Relation.Internal
-                       LAoP.Utils
-                       LAoP.Utils.Internal
+  import: common-options
+  hs-source-dirs: src
+  exposed-modules:
+    LAoP.Dist
+    LAoP.Dist.Internal
+    LAoP.Matrix.Internal
+    LAoP.Matrix.Nat
+    LAoP.Matrix.Type
+    LAoP.Relation
+    LAoP.Relation.Internal
+    LAoP.Utils
+    LAoP.Utils.Internal
 
 test-suite laop-test
-  import:              common-options
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  other-modules:       Examples.Readme
-  main-is:             Spec.hs
-  build-depends:       laop
-  ghc-options:         -threaded
-                       -rtsopts
-                       -with-rtsopts=-N
-                       -funfolding-use-threshold=16
-                       -fexcess-precision
-                       -optc-O3
-                       -optc-ffast-math
+  import: common-options
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  other-modules:
+    Examples.Readme
+    Examples.Spreadsheets
+
+  main-is: Spec.hs
+  build-depends: laop
+  ghc-options:
+    -threaded
+    -rtsopts
+    -with-rtsopts=-N
+    -funfolding-use-threshold=16
+    -fexcess-precision
+    -optc-O3
+    -optc-ffast-math
+
+  default-extensions: ImportQualifiedPost
 
 benchmark laop-benchmark
-  import:              common-options
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      benchmark
-  main-is:             Main.hs
-  build-depends:       criterion
-                     , QuickCheck
-                     , deepseq
-                     , laop
-  ghc-options:         -threaded
-                       -rtsopts
-                       -with-rtsopts=-N
-                       -funfolding-use-threshold=16
-                       -fexcess-precision
-                       -optc-O3
-                       -optc-ffast-math
+  import: common-options
+  type: exitcode-stdio-1.0
+  hs-source-dirs: benchmark
+  main-is: Main.hs
+  build-depends:
+    QuickCheck,
+    criterion,
+    deepseq,
+    laop,
+
+  ghc-options:
+    -threaded
+    -rtsopts
+    -with-rtsopts=-N
+    -funfolding-use-threshold=16
+    -fexcess-precision
+    -optc-O3
+    -optc-ffast-math
+
+  default-extensions: ImportQualifiedPost
